feat: improve server tools
